# test-codex-2

./: .env.example  .gitignore  .tool-versions  Makefile  README.md  RELEASE.md  app.js  docker-compose.yml  index.html  package-lock.json  package.json  parody_ads.py  pyproject.toml  requirements.txt  script.js  server.js  style.css  styles.css  tailwind.config.ts  tsconfig.json  turbo.json
.github/workflows/: ci.yaml
agentkit/: __init__.py  __main__.py  builder.py  cli.py  tool_scaffolder.py
apps/ai-image/: main.py  test_main.py
apps/ai-llm/: main.py  test_main.py
apps/ai-video/: main.py  test_main.py
apps/analytics-api/: .eslintrc.json  jest.config.ts  package.json  tsconfig.json
apps/api/: jest.config.ts  package.json  tsconfig.json
apps/bidder/: go.mod  main.go  main_test.go
apps/web/: next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/worker/: package.json  tsconfig.json
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
db/clickhouse/: events.sql
db/prisma/: schema.prisma
docs/: API.md  ARCHITECTURE.md  OPENRTB_SAMPLE.json  PRIVACY.md  README.md  RUNBOOK.md  api.md  architecture.md  nodes.md  storyboard-tool-spec.md
docs/examples/: prompt-enhancer.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
infra/: docker-compose.yml
mobile-splat/: app.js  index.html  styles.css
prisma/: schema.prisma
public/: index.html
radio-script-app/: README.md  package-lock.json  package.json
scripts/: migrate.sh  seed.ts  seed_clickhouse.py  seed_profiles.py  setup.sh
server/: package.json
src/: config.py  debug.py  main.py  middleware.ts  random_video_editor.py
src/app/: page.tsx  (+1 more)
starter-pack/: README.txt  agentkit_config.json  house_style_evals_dataset.jsonl  house_style_graders.proposed.json
tests/: test_builder.py  test_debug.py  test_generation_confirm.py  test_llm_client.py  test_orchestrator.py  test_production_adapters.py  test_sketch_upload.py  test_storyboard_spec.py  test_tool_scaffolder.py  test_types.py  test_video_client.py  test_video_integration.py
(+170 files in other folders)
