[tool.poetry]
name = "adtech-ai-services"
version = "0.1.0"
description = "AI microservices for the adtech stack"
authors = ["Adtech Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {version = "0.24.0", extras = ["standard"]}
httpx = "0.25.2"
pydantic = "2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
ruff = "0.1.6"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
